# shapefile-rs

./: Cargo.toml
examples/geotype-example/: Cargo.toml  README.md
examples/geotype-example/tests/data/: viz.qgz
examples/write-polygon/: Cargo.toml  _testdata.dbf
examples/write-polygon/src/: main.rs
